fix spacing

--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,7 @@ section p {
     max-width: 1200px; 
     margin: 0 auto;
     background: white; /* Background color */
-    /*padding: 20px;*/
+    padding: 20px;
     border-radius: 8px; /* Rounded corners change to square soon */
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1); /* shadow (maybe remove) */
 }
